--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,9 @@
 .container {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.body {
+  display: flex;
+  flex-direction: row;
 }
