Added route to login

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,9 +1,9 @@
-.container {
+.app {
   display: flex;
   flex-direction: column;
 }
 
-.body {
+.landing {
   display: flex;
   flex-direction: row;
 }
