Added styles for landing page

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,9 +1,11 @@
 .app {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 .landing {
+  flex: auto;
   display: flex;
   flex-direction: row;
 }
