--- a/client/src/components/landing/about/About.scss
+++ b/client/src/components/landing/about/About.scss
@@ -1,7 +1,6 @@
 .about {
-  width: 50vw;
-  height: 90vh;
-  background: aqua;
+  flex: auto;
+  background: #1da1f2;
   ul {
     margin-top: 0;
     padding-top: 40%;
