--- a/client/src/components/landing/about/About.scss
+++ b/client/src/components/landing/about/About.scss
@@ -2,10 +2,17 @@
   flex: auto;
   background: #1da1f2;
   ul {
-    margin-top: 0;
-    padding-top: 40%;
+    list-style-type: none;
+    margin-top: 27%;
     li {
-      height: 10vh;
+      height: 12vh;
+      color: #ffffff;
+      font: 18px Helvetica Neue;
+      & ::before {
+        content: '';
+        vertical-align: center;
+        padding-right: 0.75rem;
+      }
     }
   }
 }
