Styled auth buttons

--- a/client/src/components/landing/auth/Auth.scss
+++ b/client/src/components/landing/auth/Auth.scss
@@ -1,7 +1,34 @@
-.auth-buttons {
-  display: flex;
-}
-
 .auth {
   flex: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.login {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 5%;
+  button {
+    border-radius: 10px;
+    height: 28px;
+    width: 160px;
+    color: #1da1f2;
+    font: 14px Helevetica Neue;
+    border: 1px solid #1da1f2;
+  }
+}
+.signup {
+  margin-top: 23%;
+  text-align: center;
+  // TODO: Refactored button styles to a common place
+  button {
+    border-radius: 16px;
+    height: 36px;
+    width: 200px;
+    background: #1da1f2;
+    color: white;
+    font: 18px Helvetica Neue;
+    border: 1px solid #1da1f2;
+  }
 }
