Added styles for landing page

--- a/client/src/components/landing/about/About.scss
+++ b/client/src/components/landing/about/About.scss
@@ -13,6 +13,7 @@
       height: 12vh;
       color: #ffffff;
       font: 18px Helvetica Neue;
+      font-weight: bold;
       & ::before {
         content: '';
         vertical-align: center;
