--- a/client/src/components/landing/auth/Auth.scss
+++ b/client/src/components/landing/auth/Auth.scss
@@ -2,22 +2,30 @@
   flex: auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .login {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 5%;
+  margin-top: 10%;
+
   button {
-    border-radius: 10px;
+    border-radius: 90px;
   }
 }
 .signup {
-  margin-top: 23%;
+  margin-top: 10%;
   text-align: center;
-  // TODO: Refactored button styles to a common place
   button {
-    border-radius: 16px;
+    border-radius: 18px;
+    width: 250px;
+  }
+}
+
+.google-login {
+  margin-top: 5%;
+  button {
+    width: 250px;
+    border-radius: 18px;
   }
 }
