--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -1,5 +1,14 @@
-.login {
-}
-
-.login-extras {
+.login-form {
+  display: flex;
+  justify-content: center;
+  margin-top: 6%;
+  text-align: center;
+  h1 {
+    color: #1da1f2;
+    font: 2.5rem Helvetica Neue;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+  p {
+    color: #0073b1;
+  }
 }
