--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -38,10 +38,10 @@
   }
 
   .error {
-    margin: 0;
     color: red;
     text-align: left;
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
   }
 }
 
