Added styles in forgot password component

--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -15,6 +15,15 @@
   border: 1px solid #1da1f2;
 }
 
+.medium-btn {
+  height: 34px;
+  width: 150px;
+  background: #1da1f2;
+  font: 14px Helevetica Neue;
+  color: white;
+  border: 1px solid #1da1f2;
+}
+
 .credentials {
   display: flex;
   flex-direction: column;
